--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/functional",
-	"version": "12.0.3",
+	"version": "12.0.4",
 	"description": "ctx-core functional",
 	"keywords": [
 		"ctx-core",
@@ -16,14 +16,18 @@
 	},
 	"license": "Apache-2.0",
 	"author": "Brian Takita",
-	"type": "module",
 	"main": "./dist/index.js",
 	"module": "./dist/index.js",
 	"types": "./dist/index.d.ts",
+	"exports": {
+		"require": "./dist/index.js",
+		"import": "./dist/index.mjs"
+	},
 	"scripts": {
-		"build": "npm run clean && npm run compile",
+		"build": "npm run clean && npm run copy-mjs && npm run compile",
 		"clean": "rm -f tsconfig.tsbuildinfo && rm -f src/**/*.js && rm -f src/**/*.d.ts && rm -f src/**/*.map",
 		"compile": "./node_modules/.bin/tsc -b .",
+		"copy-mjs": "cd dist && echo \"export * from './index.js'\" > index.mjs",
 		"exec": "$@",
 		"prepublishOnly": "npm run build"
 	},
